# XRLib_Renderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Logger.txt  README.md
cmake/: assimp.cmake  format.cmake  glfw.cmake  glm.cmake  openxr.cmake  shaderc.cmake  vulkan.cmake
example/: Demo.cpp  fragment.frag  vertex.spv  vertex.vert
lib/: Logger.h  boxer.h  boxer_linux.cpp  boxer_mac.mm  boxer_win.cpp
src/: Core.cpp  Core.h  Info.h  LAMath.h  RenderBackend.cpp  RenderBackend.h  RenderBackendFlat.cpp  RenderBackendFlat.h  Scene.cpp  Scene.h  Util.h  XRBackend.cpp  XRBackend.h  XRLib.cpp  XRLib.h  pch.h
src/Event/: EventSystem.h  Events.h
src/Graphics/: Buffer.cpp  Buffer.h  IGraphicsRenderpass.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  Primitives.h  RenderBackend.cpp  RenderBackend.h  RenderBackendFlat.cpp  RenderBackendFlat.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  StandardRB.h  VkCore.cpp  VkCore.h  Window.cpp  Window.h
src/Graphics/Vulkan/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorSet.cpp  DescriptorSet.h  GraphicsRenderPass.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  VkCore.cpp  VkCore.h  VkGraphicsRenderpass.h  VkStandardRB.cpp  VkStandardRB.h  VkUtil.cpp  VkUtil.h  VulkanDefaults.cpp  VulkanDefaults.h
src/Scene/: Mesh.h  MeshManager.cpp  MeshManager.h  Scene.cpp  Scene.h  Scene.tpp
src/Scene/EntityType/: Camera.cpp  Camera.h  Entity.h  Light.h  Mesh.h
src/Utils/: Config.h  Event.h  Info.h  LAMath.h  LibMath.h  MathUtil.h  Time.h  Transform.cpp  Transform.h  Util.cpp  Util.h
src/XR/: XRBackend.cpp  XRBackend.h  XrBackend.cpp  XrBackend.h  XrCore.cpp  XrCore.h  XrInput.cpp  XrInput.h  XrProfile.h  XrUtil.h
